# ml-project-boilerplate

./: .gitignore  README.md  pyproject.toml  train.py
notebooks/: visualization.ipynb
src/: config.py  data.py  model.py
