[project]
name = "ml-project-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "N812"]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
]
